--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Portfolio - Neeraj Kumar</title>
+    <title> Portfolio - Neeraj Bhatt</title>
     <style>
         * {
             margin: 0;
@@ -593,7 +593,7 @@
                     A comprehensive full-stack application designed to revolutionize blood bank operations. 
                     Features real-time inventory tracking, intelligent blood matching algorithms, and emergency request management.
                 </p>
-                <a href="blood.html" class="project-btn">View Project →</a>
+                <a href=" https://neerajbhatt099.github.io/neerajbloodbank.github.io/" class="project-btn">View Project →</a>
             </div>
         </div>
     </section>
@@ -681,4 +681,5 @@
         });
     </script>
 </body>
+
 </html>
