--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
                     A comprehensive full-stack application designed to revolutionize blood bank operations. 
                     Features real-time inventory tracking, intelligent blood matching algorithms, and emergency request management.
                 </p>
-                <a href=" https://neerajbhatt099.github.io/neerajbloodbank.github.io/" class="project-btn">View Project →</a>
+                <a href=" https://neerajbhatt099.github.io/neerajbloodbank.github.io/">View Project →</a>
             </div>
         </div>
     </section>
@@ -683,3 +683,4 @@
 </body>
 
 </html>
+
