--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     <!-- ===== HEADER / HERO SECTION ===== -->
     <header id="home">
         <div class="hero-content">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTorR977obEJYNywzBid2pWtb4POAynzpAmUg&s" alt="Profile Picture" class="profile-pic">
+            <img src="https://images.hiwaifu.com/uploads/Api/robot_avatar/202601/60de4047d31c77da58de12066c004713.webp" alt="Profile Picture" class="profile-pic">
             <h1>Neeraj Bhatt</h1>
             <p class="tagline">AI & Web Development Enthusiast</p>
             <p class="hero-description">
@@ -683,5 +683,6 @@
 </body>
 
 </html>
+
 
 
